kubectl/api-deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: short-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      name: short-api
      labels: 
        components: backend
    spec:
      containers:
        - name: short-api
          image: antonlarichev/short-api:latest
          ports: 
            - containerPort: 3000
          resources:
            limits: 
              memory: "500Mi"
              cpu: "200m"    
          volumeMounts:
            - name: test
              mountPath: /etc/test
              readOnly: true
      volumes:
        - name: test
          configMap:
            name: demo-config              

#DATABASE_URL
# postrgresql://user:password@url:5432/db
